--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "^6.1.0",
     "core-js": "^2.5.4",
     "rxjs": "^6.0.0",
+    "web-animations-js": "^2.3.1",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
@@ -40,12 +41,12 @@
     "karma-coverage-istanbul-reporter": "~2.0.0",
     "karma-jasmine": "~1.1.1",
     "karma-jasmine-html-reporter": "^0.2.2",
+    "karma-junit-reporter": "~1.2.0",
+    "karma-phantomjs-launcher": "~1.0.4",
+    "phantomjs-prebuilt": "~2.1.16",
     "protractor": "~5.3.0",
     "ts-node": "~5.0.1",
     "tslint": "~5.9.1",
-    "phantomjs-prebuilt": "~2.1.16",
-    "karma-phantomjs-launcher": "~1.0.4",
-    "karma-junit-reporter": "~1.2.0",
     "typescript": "~2.7.2"
   }
 }
